Fix #35665: cycles CUDA crash after recent changes. This works around a compiler bug in CUDA 4.2 (solved in 5.5) with typedef'd function parameters.